Minor fix with navbar spacing

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -31,7 +31,7 @@ nav ul li{
 }
 
 nav ul li a{
-	padding: 1.5em;
+	padding: 1.4em;
 	text-decoration: none;
 	box-shadow: inset 0 0 0 0 #444;
 	transition: color 0.3s, box-shadow 0.3s;
@@ -65,7 +65,7 @@ li a:link, li a:visited{
     nav #links #collapsed{display: inline-block;}
 }
 
-@media only screen and (min-width: 790px){
+@media only screen and (min-width: 781px){
     nav #links li:not(:first-child){
         display: inline-block !important;
     }
